# civicpulse

./: .env.example  .gitignore  .taskpaper  CLAUDE.md  INDEX.md  README.md  pyproject.toml  todo.taskpaper
context/: conventions.md  lessons.md
docs/: CivicPulse_PRD.md  CivicPulse_Resources.md  scraping_policy.md
frontend/: index.html  privacy.html  styles.css
plans/: civicpulse.md  multi-provider-llm.md  pdf-date-extraction.md  phase1-implementation.md  phase1-scaffold.md  phase2-retrieval-pipeline.md  phase3-web-chat.md  phase4-expanded-corpus.md  phase5-letter-drafting.md  phase6-privacy-logging-soapbox.md  phase7-guardrails-hardening.md  phase8-monitoring-pilot-validation.md
scripts/: calibrate_score_floor.py  report.py
src/civicpulse/backend/: privacy.py  types.py
src/civicpulse/backend/api/: app.py  draft.py  feedback.py  loggers.py  soapbox.py
src/civicpulse/scraper/: SCRAPING_NOTES.md  base.py  chunker.py  cleaner.py  cli.py  indexer.py  models.py  writer.py
tests/: conftest.py  test_scaffold.py
tests/backend/: test_anthropic_provider.py  test_metadata_filter.py  test_openai_provider.py  test_privacy.py  test_query_api.py  test_report.py
tests/retrieval/: golden_set.yaml
tests/scraper/: conftest.py  test_agenda_center.py  test_babylon_website.py  test_base.py  test_chunker.py  test_cleaner.py  test_cli.py  test_ecode360.py  test_ecode_api.py  test_indexer.py  test_writer.py  test_youtube.py
tests/scraper/fixtures/: agenda_listing.html  department_page.html  meeting_minutes.html
vault/privacy/: privacy-policy.md
(+18 files in other folders)
